Dan's last day controls dashboard checkin

--- a/WebGUI/html/SlowControlsDashboardEdit.html
+++ b/WebGUI/html/SlowControlsDashboardEdit.html
@@ -605,7 +605,7 @@
 							
 							if(indexReferenceArray[tileNumber] == codeEditor_) //last tile -> [+] brings user to widget editor in Code Editor
 							{	
-								tile.title = "Not finding what your looking for? \nLaunch the Code Editor to make changes to the Widget Library, including making your own widget!";
+								tile.title = "Not finding what you're looking for? \nLaunch the Code Editor to make changes to the Widget Library, including making your own widget!";
 								tileIMG.src = "widgets/code-editor.png";
                                 tile.onclick = function()
                                 				{
