--- a/WebGUI/html/SlowControlsDashboardFileTree.html
+++ b/WebGUI/html/SlowControlsDashboardFileTree.html
@@ -337,6 +337,29 @@
 
 			function save()
 			{
+//				var pageName = "myDCSPage";
+//				var folderName = "";
+//				var permissionsString = "";
+//				
+//				
+//				Debug.log("Creating icon pageName=" + pageName +
+//					" folderName=" + folderName + 
+//					" permissionsString=" + permissionsString);
+//					
+//				
+//				DesktopContent.XMLHttpRequest("Request?RequestType=getList",
+//					"",
+//					function()
+//					{
+//						Debug.log("Handler()");
+//					},
+//					0 /*reqParam*/, 0 /*progressHandler*/, 0 /*callHandlerOnErr*/, false /*doNotShowLoadingOverlay*/,
+//					true /*targetSupervisor*/);
+//				
+//				
+//				return;
+					
+			
 				Debug.log("Saving....");
 				Debug.log(window.parent.pvList_);
                 window.parent.document.getElementById("mailbox").innerHTML = "Save";
