--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -179,7 +179,7 @@
 					document.getElementById(pvName).parentElement.style.border = "thin dotted red";
 				}else if(pvStatus == "LOW")
 				{
-					document.getElementById(pvName).parentElement.style.border = "thing dotted blue";
+					document.getElementById(pvName).parentElement.style.border = "thin dotted blue";
 				}else if(pvStatus == "DC")
 				{
 					document.getElementById(pvName).parentElement.style["background-color"] = "Gainsboro";
