Checkpoint in desktop icon add. Fixed Console web-app line and file handling

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -3951,8 +3951,8 @@
 						", /*parameters*/ \"" +
 						"subsetBasePath=" + treeMemberNames_[j] +
 						"&groupingFieldList=AUTO" +
-						"&recordAlias=" + recordAlias +
-						"&editableFieldList=" + "!*CommentDescription" +
+						"&recordAlias=" + encodeURIComponent(recordAlias) +
+						"&editableFieldList=" + encodeURIComponent("!*CommentDescription") +
 						"\"" +
 						");"; 
 
