Cleaning up Console disconnected-reconnected behavior

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -3948,7 +3948,7 @@
 						", false /*unique*/" +
 						", 255 /*permissionsString*/" +
 						", \"icon-Configure.png\" /*imageURL*/" +
-						", \"WebPath/html/ConfigurationGUI_subset.html?urn=\" /*windowContentURL*/" +
+						", \"ConfigurationGUI_subset.html?urn=\" /*windowContentURL*/" +
 						", \"ots::ConfigurationGUISupervisor\" /*linkedApp*/" +
 						", /*parameters*/ \"" +
 						"subsetBasePath=" + treeMemberNames_[j] +
