Checkpoint in verifying artdaq daq interface integration

--- a/WebGUI/html/ConfigurationGUI_artdaq.html
+++ b/WebGUI/html/ConfigurationGUI_artdaq.html
@@ -685,8 +685,7 @@
 					console.log("all nodes",_nodes);
 					
 					localFinishInit();
-						}, //end loadArtdaqNodeLayout handler
-						0,0,true  //reqParam, progressHandler, callHandlerOnErr
+						} //end loadArtdaqNodeLayout handler
 				); //end loadArtdaqNodeLayout call
 				
 					}, //end getArtdaqApps handler
