--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -34,8 +34,8 @@
 		}
 		#leftPane {
 			/*background-color : rgb(241, 231, 231);*/
-			overflow-x: scroll;
-			overflow-y: scroll;
+			overflow-x: auto;
+			overflow-y: auto;
 			
 		    border-top: 1px solid rgb(224, 196, 196);
 						
