Checkpoint in artdaq GUI, editing nodes

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -416,6 +416,13 @@
 			//get grouping field values
 			//	for record list
 			_rightPaneFields.innerHTML = ""; //clear any existing fields
+			
+			if(!vals.length)
+			{
+				Debug.log("No records match filters, so not proceeding with field lookup.");
+				return;
+			}
+			
 			ConfigurationAPI.getFieldsOfRecords(
 					_subsetBasePath,
 					_subsetUIDs,
