--- a/WebGUI/html/Wizard.html
+++ b/WebGUI/html/Wizard.html
@@ -135,7 +135,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/WebPath/images/otsdaqIcons/favicon-16x16.png">
         <link rel="manifest" href="/WebPath/images/otsdaqIcons/manifest.json">
         <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="/WebPath/images/otsdaqIcons/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <!-- end ots icon handling -->
 	</head>	
